--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-barcodescanner-browser-support",
-  "version": "7.1.11",
+  "version": "7.1.18",
   "description": "You can use the BarcodeScanner plugin to scan different types of barcodes (using the device's camera) and get the metadata encoded in them for processing within your application.",
   "cordova": {
     "id": "phonegap-plugin-barcodescanner",
@@ -47,5 +47,7 @@
   "devDependencies": {
     "jasmine-node": "1.14.5",
     "pluginpub": "^0.0.9"
+  },
+  "dependencies": {
   }
 }
